@@ -2,11 +2,15 @@ shutter (0.80~ppa1) jaunty; urgency=low
 
   * fixed bugs
   * Drawing Tool
+    -- LP: #311578
+       [resize canvas]
+    -- LP: #318452
+       [save and restore last used tool]
     -- LP: #338809
        [keep tool focus after one usage]
   * updated translations
 
- -- Mario Kemper <mario.kemper@googlemail.com>  Mon, 06 Apr 2009 00:35:59 +0200
+ -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 07 Apr 2009 00:22:58 +0200
 
 shutter (0.70.2~ppa4) jaunty; urgency=low
 
